# tidyshapes

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/tidyshapes/: __init__.py  cli.py  index.html
